# claude-usage-bar

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  Package.swift  README.md  claude_message.md
.github/workflows/: release.yml
Resources/: AppIcon.icns  Info.plist
Sources/ClaudeUsageBar/: AppUpdater.swift  ClaudeUsageBarApp.swift  PollingOptionFormatter.swift  PopoverView.swift  UsageChartView.swift  UsageService.swift
Tests/ClaudeUsageBarTests/: PollingOptionFormatterTests.swift  UsageModelTests.swift  UsageServiceTests.swift
macos/Sources/ClaudeUsageBar/: PopoverView.swift  SettingsView.swift  UsageService.swift
macos/scripts/: verify-release.sh
scripts/: build.sh  mock-server.py
windows/: CMakeLists.txt
windows/src/: config.h  history.cpp  history.h  http_client.cpp  http_client.h  main.cpp  notification.cpp  notification.h  oauth.cpp  oauth.h  popup.cpp  popup.h  settings.cpp  settings.h  string_utils.h  tray.cpp  tray.h  usage_model.cpp  usage_model.h  usage_service.cpp  usage_service.h  win32_raii.h
windows/tests/: test_history.cpp  test_oauth.cpp  test_settings.cpp  test_usage_model.cpp  test_usage_service.cpp
